--- a/convenient/Makefile.am
+++ b/convenient/Makefile.am
@@ -6,10 +6,10 @@ lib_LTLIBRARIES = libXCBAux.la
 xcbinclude_HEADERS = xcb_aux.h
 
 AM_CFLAGS = -Wall
-INCLUDES = $(XCB_CFLAGS)
-LDADD = $(XCB_LIBS)
 
 libXCBAux_la_SOURCES = xcb_aux.c
+libXCBAux_la_CFLAGS = $(XCB_CFLAGS)
+libXCBAux_la_LIBADD = $(XCB_LIBS)
 
 pkgconfig_DATA = xcb-aux.pc
 
