--- a/property/Makefile.am
+++ b/property/Makefile.am
@@ -6,10 +6,10 @@ lib_LTLIBRARIES = libXCBProperty.la
 xcbinclude_HEADERS = xcb_property.h
 
 AM_CFLAGS = -Wall
-INCLUDES = $(XCB_CFLAGS) -I../event
-LDADD = $(XCB_LIBS) -L../event -lXCBEvent
 
 libXCBProperty_la_SOURCES = prop.c
+libXCBProperty_la_CFLAGS = $(XCB_CFLAGS) -I../event
+libXCBProperty_la_LIBADD = $(XCB_LIBS) -L../event -lXCBEvent
 
 pkgconfig_DATA = xcb-property.pc
 
