--- a/wm/Makefile.am
+++ b/wm/Makefile.am
@@ -6,15 +6,20 @@ lib_LTLIBRARIES = libXCBWM.la
 xcbinclude_HEADERS = xcb_wm.h
 
 AM_CFLAGS = -Wall
-INCLUDES = $(XCB_CFLAGS) -I../convenient -I../atom -I../event -I../property -I../icccm
-LDADD = $(XCB_LIBS) \
+
+libXCBWM_la_SOURCES = manage.c table.c
+libXCBWM_la_CFLAGS = $(XCB_CFLAGS) \
+	-I../convenient \
+	-I../atom \
+	-I../event \
+	-I../property \
+	-I../icccm
+libXCBWM_la_LIBADD = $(XCB_LIBS) \
 	-L../convenient -lXCBAux \
 	-L../atom -lXCBAtom \
 	-L../event -lXCBEvent \
 	-L../property -lXCBProperty \
 	-L../icccm -lXCBICCCM
-
-libXCBWM_la_SOURCES = manage.c table.c
 
 pkgconfig_DATA = xcb-wm.pc
 
@@ -22,5 +27,16 @@ EXTRA_DIST = xcb-wm.pc.in
 
 noinst_PROGRAMS = xcbwm-test
 
-xcbwm_test_LDADD = $(LDADD) -L. -lXCBWM -lpthread
 xcbwm_test_SOURCES = xcbwm-test.c reply_formats.c reply_formats.h
+xcbwm_test_CFLAGS = $(XCB_CFLAGS) \
+	-I../convenient \
+	-I../atom \
+	-I../event \
+	-I../property \
+	-I../icccm
+xcbwm_test_LDADD = $(XCB_LIBS) \
+	-L../convenient -lXCBAux \
+	-L../event -lXCBEvent \
+	-L../property -lXCBProperty \
+	-L../icccm -lXCBICCCM \
+	-lXCBWM -lpthread
