--- a/wm/xcb-wm.pc.in
+++ b/wm/xcb-wm.pc.in
@@ -3,8 +3,8 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: XCBImage
-Description: XCB image convenience library
+Name: XCBWM
+Description: XCB window manager convenience library
 Version: @PACKAGE_VERSION@
 Requires: xcb xcb-atom xcb-event xcb-property xcb-icccm
 Libs: -L${libdir} -lXCBWM @LIBS@
