Add correct dependencies in xcb-util.

--- a/image/Makefile.am
+++ b/image/Makefile.am
@@ -7,9 +7,11 @@ xcbinclude_HEADERS = xcb_image.h
 
 AM_CFLAGS = -Wall
 
+XCB_IMAGE_LIBS = libXCBImage.la
+
 libXCBImage_la_SOURCES = xcb_image.c
-libXCBImage_la_CFLAGS = $(XCB_CFLAGS) $(XCB_SHM_CFLAGS) -I../convenient
-libXCBImage_la_LIBADD = $(XCB_LIBS) $(XCB_SHM_LIBS) -L../convenient -lXCBAux
+libXCBImage_la_CFLAGS = $(XCB_CFLAGS) $(XCB_SHM_CFLAGS) $(XCB_AUX_CFLAGS)
+libXCBImage_la_LIBADD = $(XCB_LIBS) $(XCB_SHM_LIBS) $(XCB_AUX_LIBS)
 
 pkgconfig_DATA = xcb-image.pc
 
@@ -18,14 +20,14 @@ EXTRA_DIST=xcb-image.pc.in
 noinst_PROGRAMS = test_xcb_image test_xcb_image_shm test_formats
 
 test_xcb_image_SOURCES = test_xcb_image.c
-test_xcb_image_CFLAGS = $(XCB_CFLAGS) $(XCB_SHM_CFLAGS) -I../convenient
-test_xcb_image_LDADD = $(XCB_LIBS) -L../convenient -lXCBAux -lXCBImage
+test_xcb_image_CFLAGS = $(XCB_CFLAGS) $(XCB_SHM_CFLAGS) $(XCB_AUX_CFLAGS)
+test_xcb_image_LDADD = $(XCB_LIBS) $(XCB_AUX_LIBS) $(XCB_IMAGE_LIBS)
 
 test_xcb_image_shm_SOURCES = test_xcb_image_shm.c
-test_xcb_image_shm_CFLAGS = $(XCB_CFLAGS) $(XCB_SHM_CFLAGS) -I../convenient
+test_xcb_image_shm_CFLAGS = $(XCB_CFLAGS) $(XCB_SHM_CFLAGS) $(XCB_AUX_CFLAGS)
 test_xcb_image_shm_LDADD = $(XCB_LIBS) $(XCB_SHM_LIBS) \
-	-L../convenient -lXCBAux -lXCBImage
+	$(XCB_AUX_LIBS) $(XCB_IMAGE_LIBS)
 
 test_formats_SOURCES = test_formats.c
-test_formats_CFLAGS = $(XCB_CFLAGS) $(XCB_SHM_CFLAGS) -I../convenient
-test_formats_LDADD = $(XCB_LIBS) -L../convenient -lXCBAux -lXCBImage
+test_formats_CFLAGS = $(XCB_CFLAGS) $(XCB_SHM_CFLAGS) $(XCB_AUX_CFLAGS)
+test_formats_LDADD = $(XCB_LIBS) $(XCB_AUX_LIBS) $(XCB_IMAGE_LIBS)
