Bug #7150: Check for gcc & Sun cc in configure.ac and use correct flags to turn on more warnings for each
This is the first of two fixes needed to get xcb-util building on
Solaris.

Signed-off-by: Jamey Sharp <jamey@minilop.net>

--- a/convenient/Makefile.am
+++ b/convenient/Makefile.am
@@ -5,7 +5,7 @@ lib_LTLIBRARIES = libXCBAux.la
 
 xcbinclude_HEADERS = xcb_aux.h
 
-AM_CFLAGS = -Wall
+AM_CFLAGS = $(CWARNFLAGS)
 
 libXCBAux_la_SOURCES = xcb_aux.c
 libXCBAux_la_CFLAGS = $(XCB_CFLAGS)
