--- a/property/Makefile.am
+++ b/property/Makefile.am
@@ -5,7 +5,7 @@ lib_LTLIBRARIES = libXCBProperty.la
 
 xcbinclude_HEADERS = xcb_property.h
 
-AM_CFLAGS = -Wall
+AM_CFLAGS = $(CWARNFLAGS)
 
 libXCBProperty_la_SOURCES = prop.c
 libXCBProperty_la_CFLAGS = $(XCB_CFLAGS) $(XCB_EVENT_CFLAGS)
