Implement a prototype API for xcb_render_util_composite_text
This API wraps xcb_render_composite_glyphs_8/16/32, making them usable.
This currently has the limitation of not supporting lists of glyphs
longer than 252 for text_8 or 254 otherwise.
Currently untested; work into cairo or demo/rendertest.

--- a/renderutil/Makefile.am
+++ b/renderutil/Makefile.am
@@ -5,7 +5,7 @@ lib_LTLIBRARIES = libXCBRenderUtil.la
 
 xcbinclude_HEADERS = xcb_renderutil.h
 
-libXCBRenderUtil_la_SOURCES = cache.c util.c
+libXCBRenderUtil_la_SOURCES = cache.c util.c glyph.c
 libXCBRenderUtil_la_CFLAGS = $(XCB_CFLAGS) $(XCB_RENDER_CFLAGS)
 libXCBRenderUtil_la_LIBADD = $(XCB_LIBS) $(XCB_RENDER_LIBS)
 
