Bug #6781: make util compile with srcdir != builddir.

--- a/property/Makefile.am
+++ b/property/Makefile.am
@@ -8,8 +8,8 @@ xcbinclude_HEADERS = xcb_property.h
 AM_CFLAGS = -Wall
 
 libXCBProperty_la_SOURCES = prop.c
-libXCBProperty_la_CFLAGS = $(XCB_CFLAGS) -I../event
-libXCBProperty_la_LIBADD = $(XCB_LIBS) -L../event -lXCBEvent
+libXCBProperty_la_CFLAGS = $(XCB_CFLAGS) $(XCB_EVENT_CFLAGS)
+libXCBProperty_la_LIBADD = $(XCB_LIBS) $(XCB_EVENT_LIBS)
 
 pkgconfig_DATA = xcb-property.pc
 
