rename the libraries from libXCBFoo.* to libxcb-foo.*. Use foo_CPPFLAGS instead of foo_CFLAGS (*_CFLAGS variables store preprocessor options)

--- a/configure.ac
+++ b/configure.ac
@@ -32,15 +32,15 @@ PKG_CHECK_MODULES(XCB_SHM, xcb-shm)
 PKG_CHECK_MODULES(XCB_RENDER, xcb-render)
 
 XCB_AUX_CFLAGS='-I$(top_srcdir)/convenient'
-XCB_AUX_LIBS='$(top_builddir)/convenient/libXCBAux.la'
+XCB_AUX_LIBS='$(top_builddir)/convenient/libxcb-aux.la'
 XCB_ATOM_CFLAGS='-I$(top_srcdir)/atom -I$(top_builddir)/atom'
-XCB_ATOM_LIBS='$(top_builddir)/atom/libXCBAtom.la'
+XCB_ATOM_LIBS='$(top_builddir)/atom/libxcb-atom.la'
 XCB_EVENT_CFLAGS='-I$(top_srcdir)/event'
-XCB_EVENT_LIBS='$(top_builddir)/event/libXCBEvent.la'
+XCB_EVENT_LIBS='$(top_builddir)/event/libxcb-event.la'
 XCB_PROPERTY_CFLAGS='-I$(top_srcdir)/property'
-XCB_PROPERTY_LIBS='$(top_builddir)/property/libXCBProperty.la'
+XCB_PROPERTY_LIBS='$(top_builddir)/property/libxcb-property.la'
 XCB_ICCCM_CFLAGS='-I$(top_srcdir)/icccm'
-XCB_ICCCM_LIBS='$(top_builddir)/icccm/libXCBICCCM.la'
+XCB_ICCCM_LIBS='$(top_builddir)/icccm/libxcb-icccm.la'
 AC_SUBST(XCB_AUX_CFLAGS)
 AC_SUBST(XCB_AUX_LIBS)
 AC_SUBST(XCB_ATOM_CFLAGS)
