--- a/renderutil/Makefile.am
+++ b/renderutil/Makefile.am
@@ -1,13 +1,13 @@
 
 MAINTAINERCLEANFILES = Makefile.in
 
-lib_LTLIBRARIES = libXCBRenderUtil.la
+lib_LTLIBRARIES = libxcb-renderUtil.la
 
 xcbinclude_HEADERS = xcb_renderutil.h
 
-libXCBRenderUtil_la_SOURCES = cache.c util.c glyph.c
-libXCBRenderUtil_la_CFLAGS = $(XCB_CFLAGS) $(XCB_RENDER_CFLAGS)
-libXCBRenderUtil_la_LIBADD = $(XCB_LIBS) $(XCB_RENDER_LIBS)
+libxcb_renderUtil_la_SOURCES = cache.c util.c glyph.c
+libxcb_renderUtil_la_CPPFLAGS = $(XCB_CFLAGS) $(XCB_RENDER_CFLAGS)
+libxcb_renderUtil_la_LIBADD = $(XCB_LIBS) $(XCB_RENDER_LIBS)
 
 pkgconfig_DATA = xcb-renderutil.pc
 
