--- a/convenient/Makefile.am
+++ b/convenient/Makefile.am
@@ -1,15 +1,15 @@
 
 MAINTAINERCLEANFILES = Makefile.in
 
-lib_LTLIBRARIES = libXCBAux.la
+lib_LTLIBRARIES = libxcb-aux.la
 
 xcbinclude_HEADERS = xcb_aux.h
 
 AM_CFLAGS = $(CWARNFLAGS)
 
-libXCBAux_la_SOURCES = xcb_aux.c
-libXCBAux_la_CFLAGS = $(XCB_CFLAGS)
-libXCBAux_la_LIBADD = $(XCB_LIBS)
+libxcb_aux_la_SOURCES = xcb_aux.c
+libxcb_aux_la_CPPFLAGS = $(XCB_CFLAGS)
+libxcb_aux_la_LIBADD = $(XCB_LIBS)
 
 pkgconfig_DATA = xcb-aux.pc
 
