--- a/reply/xcb-reply.pc.in
+++ b/reply/xcb-reply.pc.in
@@ -3,9 +3,9 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: XCBReply
+Name: XCB Reply library
 Description: XCB reply convenience library
 Version: @PACKAGE_VERSION@
 Requires: xcb
-Libs: -L${libdir} -lXCBReply @LIBS@
+Libs: -L${libdir} -lxcb-reply @LIBS@
 Cflags: -I${includedir}
