--- a/debian/rules
+++ b/debian/rules
@@ -4,3 +4,9 @@ DEB_DH_INSTALL_SOURCEDIR=debian/tmp
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
+
+ORIG_MAJOR=$(shell git describe upstream | cut -d- -f1)
+ORIG_GIT=$(shell git describe upstream | cut -d- -f2)
+
+get-orig-source:
+	git archive upstream | gzip -9 > ../xcb-util_$(ORIG_MAJOR)+git$(ORIG_GIT).orig.tar.gz
