Add autogen and autoconf requisite
Signed-off-by: Julien Danjou <julien@danjou.info>

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,10 @@ Build-Depends: cdbs,
                gperf,
                pkg-config,
                libxcb-shm0-dev,
-               m4
+               m4,
+               autoconf,
+               automake,
+               libtool
 Standards-Version: 3.7.3
 Homepage: http://xcb.freedesktop.org
 
