--- a/debian/rules
+++ b/debian/rules
@@ -8,5 +8,13 @@ include /usr/share/cdbs/1/class/autotools.mk
 ORIG_MAJOR=$(shell git describe upstream | cut -d- -f1)
 ORIG_GIT=$(shell git describe upstream | cut -d- -f2)
 
+post-patches:: configure-stamp
+configure-stamp:
+	./autogen.sh $(DEB_CONFIGURE_NORMAL_ARGS)
+	touch configure-stamp
+
+cleanbuilddir::
+	rm -f configure-stamp
+
 get-orig-source:
 	git archive upstream | gzip -9 > ../xcb-util_$(ORIG_MAJOR)+git$(ORIG_GIT).orig.tar.gz
