dh_makeshlibs get a -V

--- a/debian/rules
+++ b/debian/rules
@@ -5,6 +5,8 @@ DEB_DH_INSTALL_SOURCEDIR=debian/tmp
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 
+DEB_DH_MAKESHLIBS_ARGS=-V
+
 ORIG_MAJOR=$(shell git describe upstream | cut -d- -f1)
 ORIG_GIT=$(shell git describe upstream | cut -d- -f2)
 
