First OpenInkpot build

--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,7 @@
 Source: xcb-util
 Section: libdevel
 Priority: extra
-Maintainer: Julien Danjou <acid@debian.org>
-Uploaders: Arnaud Fontaine <arnau@debian.org>
+Maintainer: Mikhail Gusarov <dottedmag@dottedmag.net>
 Build-Depends: cdbs,
                debhelper (>= 5),
                autotools-dev,
@@ -15,13 +14,15 @@ Build-Depends: cdbs,
                autoconf,
                automake,
                libtool
+XCS-Cross-Host-Build-Depends: cdbs, debhelper (>= 5), autotools-dev, gperf, pkg-config, m4, autoconf, automake, libtool
+XCS-Cross-Build-Depends: libxcb-render0-dev, libxcb1-dev, libxcb-shm0-dev
 Standards-Version: 3.8.0
 Homepage: http://xcb.freedesktop.org
 Vcs-Git: git://git.debian.org/git/collab-maint/xcb-util.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/xcb-util.git
 
 Package: libxcb-atom0
-Section: libs
+Section: gui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: utility libraries for X C Binding -- atom
@@ -51,7 +52,7 @@ Description: utility libraries for X C Binding -- atom
  the X protocol but which have traditionally been provided by Xlib.
 
 Package: libxcb-aux0
-Section: libs
+Section: gui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: utility libraries for X C Binding -- aux
@@ -83,7 +84,7 @@ Description: utility libraries for X C Binding -- aux
  the X protocol but which have traditionally been provided by Xlib.
 
 Package: libxcb-event0
-Section: libs
+Section: gui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: utility libraries for X C Binding -- event
@@ -113,7 +114,7 @@ Description: utility libraries for X C Binding -- event
  the X protocol but which have traditionally been provided by Xlib.
 
 Package: libxcb-image0
-Section: libs
+Section: gui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: utility libraries for X C Binding -- image
@@ -144,7 +145,7 @@ Description: utility libraries for X C Binding -- image
  the X protocol but which have traditionally been provided by Xlib.
 
 Package: libxcb-keysyms0
-Section: libs
+Section: gui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: utility libraries for X C Binding -- keysyms
@@ -176,7 +177,7 @@ Description: utility libraries for X C Binding -- keysyms
  the X protocol but which have traditionally been provided by Xlib.
 
 Package: libxcb-property0
-Section: libs
+Section: gui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: utility libraries for X C Binding -- property
@@ -207,7 +208,7 @@ Description: utility libraries for X C Binding -- property
  the X protocol but which have traditionally been provided by Xlib.
 
 Package: libxcb-render-util0
-Section: libs
+Section: gui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: utility libraries for X C Binding -- render-util
@@ -239,7 +240,7 @@ Description: utility libraries for X C Binding -- render-util
  the X protocol but which have traditionally been provided by Xlib.
 
 Package: libxcb-reply0
-Section: libs
+Section: gui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: utility libraries for X C Binding -- reply
@@ -269,7 +270,7 @@ Description: utility libraries for X C Binding -- reply
  the X protocol but which have traditionally been provided by Xlib.
 
 Package: libxcb-wm0
-Section: libs
+Section: gui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: utility libraries for X C Binding -- wm
@@ -303,7 +304,7 @@ Description: utility libraries for X C Binding -- wm
  the X protocol but which have traditionally been provided by Xlib.
 
 Package: libxcb-icccm0
-Section: libs
+Section: gui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: utility libraries for X C Binding -- icccm
