wm: link test against atom lib
Debian bug #502730

Signed-off-by: Julien Danjou <julien@danjou.info>

--- a/wm/Makefile.am
+++ b/wm/Makefile.am
@@ -37,6 +37,7 @@ xcbwm_test_CPPFLAGS = $(XCB_CFLAGS) \
 	$(XCB_PROPERTY_CFLAGS) \
 	$(XCB_ICCCM_CFLAGS)
 xcbwm_test_LDADD = $(XCB_LIBS) \
+	$(XCB_ATOM_LIBS) \
 	$(XCB_AUX_LIBS) \
 	$(XCB_EVENT_LIBS) \
 	$(XCB_PROPERTY_LIBS) \
