--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 
 MAINTAINERCLEANFILES = Makefile.in
 
-SUBDIRS = atom aux event property icccm image keysyms reply wm renderutil
+SUBDIRS = atom aux event property icccm image keysyms reply renderutil
