--- a/Makefile.am
+++ b/Makefile.am
@@ -2,3 +2,5 @@
 MAINTAINERCLEANFILES = Makefile.in
 
 SUBDIRS = atom aux event property icccm image keysyms reply renderutil
+
+EXTRA_DIST=xcb-util-common.h
